# bazel-nodejs-rollup-multi-package

./: .gitignore  WORKSPACE.bazel
js/alpha/: BUILD.bazel  WORKSPACE.bazel  index.js  package-lock.json  package.json  rollup.config.js
js/beta/: index.js  package-lock.json  package.json
