workspace(
    name = "multi-nodejs-proof-of-concept",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "build_bazel_rules_nodejs",
    sha256 = "2b2004784358655f334925e7eadc7ba80f701144363df949b3293e1ae7a2fb7b",
    urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/5.4.0/rules_nodejs-5.4.0.tar.gz"],
)

load("@build_bazel_rules_nodejs//:repositories.bzl", "build_bazel_rules_nodejs_dependencies")
build_bazel_rules_nodejs_dependencies()

load("@build_bazel_rules_nodejs//:index.bzl", "node_repositories", "npm_install")

node_repositories(
    node_version = "14.13.0",
)

npm_install(
  name = "alpha",
  package_json = "//js/alpha:package.json",
  package_lock_json = "//js/alpha:package-lock.json",
)

npm_install(
  name = "beta",
  package_json = "//js/beta:package.json",
  package_lock_json = "//js/beta:package-lock.json",
)
