workspace(
    name = "multi-nodejs-proof-of-concept",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "build_bazel_rules_nodejs",
    sha256 = "2b2004784358655f334925e7eadc7ba80f701144363df949b3293e1ae7a2fb7b",
    urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/5.4.0/rules_nodejs-5.4.0.tar.gz"],
)
load("@build_bazel_rules_nodejs//:repositories.bzl", "build_bazel_rules_nodejs_dependencies")
build_bazel_rules_nodejs_dependencies()

load("@build_bazel_rules_nodejs//:index.bzl", "npm_install")

# yarn_install(
#   name = "npm",
#   package_json = "//js/alpha:package.json",
#   yarn_lock = "//js/alpha:yarn.lock",
# )

npm_install(
  name = "npm_alpha",
  package_json = "@alpha//:package.json",
  package_lock_json = "@alpha//:package-lock.json",
)

local_repository(
  name = "alpha",
  path = "js/alpha",
  repo_mapping = {
    "@npm": "@npm_alpha",
  },
)
